[package]
name = "serum-remote"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_remote"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = { version = "0.22.1", features = ["dex"] }
safe-transmute = "0.11.0"
