[package]
name = "serum-remote"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_remote"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.23.0"
anchor-spl = { version = "0.23.0", features = ["dex"] }
safe-transmute = "0.11.0"
