[package]
name = "serum-remote"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_remote"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = ["anchor-spl/devnet"]
localnet = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = { version = "0.24.2", features = ["dex"] }
safe-transmute = "0.11.0"
static_assertions = "1.1.0"
